# searcharr

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_models.py  002_add_client_category.py
backend/app/: config.py  main.py
backend/app/api/: health.py
backend/app/api/v1/: clients.py  download.py  instances.py  router.py  search.py
backend/app/core/: database.py
backend/app/models/: __init__.py  base.py  client.py  instance.py
backend/app/schemas/: __init__.py  base.py  client.py  download.py  instance.py  search.py
backend/app/services/: __init__.py  encryption.py  jackett.py  prowlarr.py  qbittorrent.py  search_aggregator.py
backend/scripts/: migrate.py  start.py
backend/tests/: conftest.py  test_health.py
backend/tests/api/: test_clients.py  test_download.py  test_instances.py  test_search.py
backend/tests/services/: test_encryption.py
deployment/nginx/: default.conf  nginx.conf
deployment/scripts/: entrypoint.sh
deployment/supervisor/: supervisord.conf
docs/: application-context.txt  mockup.jsx
docs/api/: api-reference.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: axios.ts  clients.ts  download.ts  index.ts  instances.ts  search.ts
frontend/src/components/: ConfirmDialog.tsx  EmptyState.tsx  InstanceCard.tsx  Layout.tsx  LoadingSpinner.tsx  Modal.tsx  StatusBadge.tsx  index.ts
frontend/src/components/modals/: AddClientModal.tsx  AddInstanceModal.tsx  EditClientModal.tsx  EditInstanceModal.tsx  SendToClientModal.tsx  index.ts
frontend/src/hooks/: index.ts  useClients.ts  useDownload.ts  useInstances.ts  useSearch.ts
frontend/src/pages/: ClientsPage.tsx  InstancesPage.tsx  SearchPage.tsx  index.ts
frontend/src/stores/: index.ts  useSearchStore.ts
frontend/src/types/: client.ts  common.ts  index.ts  instance.ts  search.ts
frontend/src/utils/: cn.ts  format.ts  index.ts
scripts/: run_ci_checks.sh  run_ci_checks.sh.bak
